--- a/notes-backend/package.json
+++ b/notes-backend/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:ui": "@powershell Remove-Item -Recurse -Force dist && cd ../../notes-frontend && npm run build && @powershell Copy-Item dist -Recurse ../notes-backend",
+    "build:ui": "@powershell Remove-Item -Recurse -Force dist && cd ../../notes-frontend && npm run build && @powershell Copy-Item dist -Recurse ../render-test/notes-backend",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
   "author": "Lucas Sterpino",
